--- a/compile/Makefile
+++ b/compile/Makefile
@@ -7,6 +7,10 @@
 #prg.c двата сорс кода се компилират до обектни файлове и после обектните файлове се 
 #компилират в един бинарен. Тази техника пести време за компилация, особено при големи 
 #проекти, където времето за компилация е доста голямо.
+#От друга страна ползваме cos.c и val.c за генерирането на програма cos
+
+#!!!!Makefile прави така, че се компилират само файловете, които са изменяни!!!!
+#
 
 #https://www.youtube.com/watch?v=GExnnTaBELk&t=1806s линк от който е взет примера естествено леко опростен :)
 
@@ -18,7 +22,7 @@
 all: cos prg #Изпълнениети започва от първия ред в тази рецепта се посочва кои рецепти да се изпълнят
 #рецепта cos се изпълнява на ред 30 а prg  на ред 21
 
-prg: prg.o val.o #Ако файловете prg.o и val.o не са генерирани се изпълняват редове 24 и 27
+prg: prg.o val.o #Ако файловете prg.o и val.o не са генерирани се изпълняват редове 28 и 31
 	gcc prg.o val.o -o prg
 
 prg.o: prg.c val.h
@@ -27,7 +31,7 @@ prg.o: prg.c val.h
 val.o: val.c
 	gcc val.c -c 
 
-cos: cos.o val.o #Ако файловете cos.o и val.o не са генерирани се изпълняват редове 33 и 27
+cos: cos.o val.o #Ако файловете cos.o и val.o не са генерирани се изпълняват редове 37 и 31
 	gcc val.o cos.o -o cos -l m
 
 cos.o: cos.c val.h
@@ -43,3 +47,15 @@ clean:
 clear: 
 	@rm *.o prg cos
 	@echo "Clean all generated files"
+
+
+#Схема на компилиране със числото пред файла е обозначен теда на който се изпълнява командата
+#В дъното на схемата се разполагат изходните файлове, ако някой файл по веригата липсва Makefile се
+#обръща към съответната рецепта, също и когато се изменя някой от изходните файлове
+
+#      25.prg       34.cos
+#     /       \     /     \
+# 28.prg.o    31.val.o   37.cos.o
+#    |           |          |
+# prg.c val.h   val.c    cos.c val.h
+# 
