Make file update

--- a/compile/Makefile
+++ b/compile/Makefile
@@ -1,61 +1,52 @@
-#Този Makefile е пример как може да се компилират няколко файла 
-#в един в конкретния случай примера се състои от два файла val.c
-#и prg.c
-#val.c съдържа валидираща функция, която се ползва в prg.c, зa целта
-#не е необходимо да се използва директивата include, тъй като кода на val.c ще се 
-#прибави към кода на prg.c, достатъчно е само да се декларира прототипа на функцията в 
-#prg.c двата сорс кода се компилират до обектни файлове и после обектните файлове се 
-#компилират в един бинарен. Тази техника пести време за компилация, особено при големи 
-#проекти, където времето за компилация е доста голямо.
-#От друга страна ползваме cos.c и val.c за генерирането на програма cos
-
-#!!!!Makefile прави така, че се компилират само файловете, които са изменяни!!!!
+#Този Makefile е разширение на Makefile.1, като са добавени променливи за бърза смяна на компилатора
+#Както и променливи за опциите, и имената на изходните програми
+#Тази техника олеснява евентуалната смяна на някое от изброените 
+#
 #
 
-#https://www.youtube.com/watch?v=GExnnTaBELk&t=1806s линк от който е взет примера естествено леко опростен :)
 
+CC = gcc        	#Променлива в която се съдържа използвания компилатор
+FLAGS = -o      	#Променлива в която се съдържа опцията за създаване на бинарни фйлове
+LINKER = -c			#Променлива в която се съдържа опциятя за създаване на обектни файлове
 
-#Общ синтаксис на "рецептите":
-#Цел: зависимост
-#<tab>команда
+MAIN_PRG = my_program 	#Променлива в която се съдържа името на една от програмите, които се компилира
+TRIG_PRG = cos_program 	#Променлива в която се съдържа реализираната тригонометрична програма 
 
-all: cos prg #Изпълнениети започва от първия ред в тази рецепта се посочва кои рецепти да се изпълнят
-#рецепта cos се изпълнява на ред 30 а prg  на ред 21
+all: $(MAIN_PRG) $(TRIG_PRG)
 
-prg: prg.o val.o #Ако файловете prg.o и val.o не са генерирани се изпълняват редове 28 и 31
-	gcc prg.o val.o -o prg
+$(MAIN_PRG): prg.o val.o
+	$(CC) $^ $(FLAGS) $@
 
 prg.o: prg.c val.h
-	gcc prg.c -c 
+	$(CC) $< -c 
 
 val.o: val.c
-	gcc val.c -c 
+	$(CC) $< -c
 
-cos: cos.o val.o #Ако файловете cos.o и val.o не са генерирани се изпълняват редове 37 и 31
-	gcc val.o cos.o -o cos -l m
+$(TRIG_PRG): cos.o val.o
+	$(CC) $^ -o $@ -l m
 
 cos.o: cos.c val.h
-	gcc cos.c -c -l m
+	$(CC) $< $(LINKER) -l m
 
 
 #Тук добавяме изчистващи рецепти
 	
 clean: 
-	@rm *.o prg cos
+	@rm *.o $(MAIN_PRG) $(TRIG_PRG)
 	@echo "Clean all generated files"
 
 clear: 
-	@rm *.o prg cos
+	@rm *.o $(MAIN_PRG) $(TRIG_PRG)
 	@echo "Clean all generated files"
 
+#Използаните символи $<, $^, се наричат автоматични променливи 
+#повече за тях на https://www.gnu.org/software/make/manual/html_node/Automatic-Variables.html
+#
+#В следния израз $< е равносилно на prg.c
+#prg.o: prg.c val.h
+#	$(CC) $< -c 
 
-#Схема на компилиране със числото пред файла е обозначен теда на който се изпълнява командата
-#В дъното на схемата се разполагат изходните файлове, ако някой файл по веригата липсва Makefile се
-#обръща към съответната рецепта, също и когато се изменя някой от изходните файлове
-
-#      25.prg       34.cos
-#     /       \     /     \
-# 28.prg.o    31.val.o   37.cos.o
-#    |           |          |
-# prg.c val.h   val.c    cos.c val.h
-# 
+#В следния израз $^ е равносилно на cos.o val.o а $@ на $(TRIG_PRG)
+#$(TRIG_PRG): cos.o val.o
+#	$(CC) $^ -o $@ -l m
