Last update of compile tutorial

--- a/compile/Makefile
+++ b/compile/Makefile
@@ -1,30 +1,27 @@
-#Този Makefile е разширение на Makefile.1, като са добавени променливи за бърза смяна на компилатора
-#Както и променливи за опциите, и имената на изходните програми
-#Тази техника олеснява евентуалната смяна на някое от изброените 
+#Този Makefile е разширение на Makefile.2, като е добавена верига от зависимости
+#Вижда се в Makefile.2, че редове 21 и 24 се повтарят за да се избегне повторение 
+#в дъното на файла се добавя т.н. верига от зависимости 
 #
 #
 
 
-CC = gcc        	#Променлива в която се съдържа използвания компилатор
-FLAGS = -o      	#Променлива в която се съдържа опцията за създаване на бинарни фйлове
-LINKER = -c			#Променлива в която се съдържа опциятя за създаване на обектни файлове
+CC = gcc        	
+FLAGS = -o      	
+LINKER = -c			
 
-MAIN_PRG = my_program 	#Променлива в която се съдържа името на една от програмите, които се компилира
-TRIG_PRG = cos_program 	#Променлива в която се съдържа реализираната тригонометрична програма 
+MAIN_PRG = my_program 	
+TRIG_PRG = cos_program 	 
 
 all: $(MAIN_PRG) $(TRIG_PRG)
 
 $(MAIN_PRG): prg.o val.o
 	$(CC) $^ $(FLAGS) $@
 
-prg.o: prg.c val.h
-	$(CC) $< -c 
-
-val.o: val.c
-	$(CC) $< -c
+%.o: %.c %.h      # Тук добавяме общия запис на повтарящите се редове това означава всички таргети .о i .c, .h
+	$(CC) $< $(LINKER)
 
 $(TRIG_PRG): cos.o val.o
-	$(CC) $^ -o $@ -l m
+	$(CC) $^ $(FLAGS) $@ -l m
 
 cos.o: cos.c val.h
 	$(CC) $< $(LINKER) -l m
@@ -40,13 +37,7 @@ clear:
 	@rm *.o $(MAIN_PRG) $(TRIG_PRG)
 	@echo "Clean all generated files"
 
-#Използаните символи $<, $^, се наричат автоматични променливи 
-#повече за тях на https://www.gnu.org/software/make/manual/html_node/Automatic-Variables.html
-#
-#В следния израз $< е равносилно на prg.c
-#prg.o: prg.c val.h
-#	$(CC) $< -c 
-
-#В следния израз $^ е равносилно на cos.o val.o а $@ на $(TRIG_PRG)
-#$(TRIG_PRG): cos.o val.o
-#	$(CC) $^ -o $@ -l m
+# Тук разполагаме веригата от зависимости
+# ----------------------------------------
+prg.o   : prg.c val.h
+val.o   : val.c
