--- a/compile/.vscode/settings.json
+++ b/compile/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "files.associations": {
-        "val.h": "c"
+        "val.h": "c",
+        "math.h": "c",
+        "stdio.h": "c"
     }
 }
